Closed
Bug 788396
Opened 13 years ago
Closed 13 years ago
Send IPC logging to logcat when enabled
Categories
(Core :: IPC, defect)
Tracking
()
RESOLVED
FIXED
mozilla18
People
(Reporter: cjones, Assigned: cjones)
Details
Attachments
(1 file)
6.83 KB,
patch
|
bent.mozilla
:
review+
|
Details | Diff | Splinter Review |
It's a pain in the butt to debug IPC-related crashes on android, because the IPC error messages go to stderr which is /dev/null. We should send them to logcat instead.
Assignee | ||
Comment 1•13 years ago
|
||
Was cleaning mq house and came across this. I had to write it to debug an android crash, and I'm sure other folks would find it useful too!
Assignee: nobody → jones.chris.g
Attachment #658382 -
Flags: review?(bent.mozilla)
Comment on attachment 658382 [details] [diff] [review]
Centralize usage of ipc::LoggingEnabled() and ensure it goes to logcat on bionic OSes
Review of attachment 658382 [details] [diff] [review]:
-----------------------------------------------------------------
This looks fine, though it's really wild that fprintf(stderr) does domething different than printf_stderr().
Attachment #658382 -
Flags: review?(bent.mozilla) → review+
Assignee | ||
Comment 3•13 years ago
|
||
Comment 4•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in
before you can comment on or make changes to this bug.
Description
•