Bug 788396: Centralize usage of ipc::LoggingEnabled() and ensure it goes to logcat on bionic OSes. r=bent